--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
@@ -89,7 +89,7 @@
               [required]="true"
                display="chip"
               #djInput="ngModel"
-              
+              (onChange)="onChange()"
               >            
             </p-dropdown>
             <div *ngIf="djInput.invalid && (djInput.dirty || djInput.touched)" class="text-danger">
