--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -31,7 +31,7 @@
               <p-dropdown name="docType" [options]="typeSource" [(ngModel)]="request.documenttype"
                 optionLabel="Documenttypename" optionValue="Documenttypename" [disabled]="viewMode"
                 [autoDisplayFirst]="false" [required]="true"
-                #DocumenttypeInput="ngModel" placeholder="Select Document Type">
+                #DocumenttypeInput="ngModel" placeholder="Select Document Type" (onChange)="onChange()">
               </p-dropdown>
               <div *ngIf="DocumenttypeInput.invalid && (DocumenttypeInput.dirty || DocumenttypeInput.touched)" class="text-danger">
                 Document Type is required
@@ -39,7 +39,7 @@
             </div>
           </div>
 
-          <div class="form-group row">
+          <!-- <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label">Department<span
                 style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
@@ -50,6 +50,14 @@
               <div *ngIf="DepartmentInput.invalid && (DepartmentInput.dirty || DepartmentInput.touched)" class="text-danger">
                 Department is required
               </div>
+            </div>
+          </div> -->
+
+          <div class="form-group row">
+            <label for="department" class="col-sm-2 col-form-label">Department</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="Department" name="Department"
+              [(ngModel)]="request.department" readonly [disabled]="viewMode"/>
             </div>
           </div>
 
