Existing document requests

--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
@@ -2,7 +2,7 @@
     <div class="row p-2">
         <div class="col">
             <div class="d-flex justify-content-between align-items-center">
-                <h4 class="page-title flex-grow-1">Existing Document Requests</h4>
+                <h4 class="page-title flex-grow-1">Existing Document Request Configuration</h4>
 
                 <div class="back-icon" style="margin-right: 10px;">
                     <a href="javascript:void(0);" onclick="history.back();">
