--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -44,7 +44,7 @@
                  <th pSortableColumn="workflow" style="width:100px">Printed by <p-sortIcon field="modifiedby"></p-sortIcon></th>
                  <th pSortableColumn="noofcopies" style="width:100px">Print Count <p-sortIcon field="noofcopies"></p-sortIcon></th>
                  <!-- <th pSortableColumn="Status" style="width:100px">Status <p-sortIcon field="Status"></p-sortIcon></th> -->
-                 <th style="width:80px">Modify</th>
+                 <!-- <th style="width:80px">Modify</th> -->
    
                </tr>
              </ng-template>
@@ -59,8 +59,8 @@
                  <td>{{doc?.noofcopies}}</td>
    
                  <!-- <td><span class="status" [ngClass]="getStatusClass(doc['status'])">{{doc.status}} </span></td> -->
-                 <td class="text-center" (click)="editdoc(doc)" *ngIf="access && doc?.status==='In-Progress'"><i class="bi bi-pencil"></i></td>
-                 <td class="text-center" *ngIf="!access">
+                 <!-- <td class="text-center" (click)="editdoc(doc)" *ngIf="access && doc?.status==='In-Progress'"><i class="bi bi-pencil"></i></td> -->
+                 <!-- <td class="text-center" *ngIf="!access">
                    <i class="bi bi-lock bi-lg" 
                    [ngClass]="{'text-primary':true}"
                    title="No Permissions">
@@ -71,7 +71,7 @@
                    [ngClass]="{'text-primary':true}"
                    title="Approved">
                    </i>
-                 </td>
+                 </td> -->
                </tr>
              </ng-template>
            </p-table>
