--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-revision/review-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-revision/review-revision.component.html
@@ -4,7 +4,7 @@
       
       <div class="col d-flex justify-content-between align-items-center">
 
-        <h4 class="page-title">{{editMode? 'Update': 'New' }} Document Request</h4>
+        <h4 class="page-title">Document  Revision request</h4>
   
         <div class="back-icon" style="margin-right: 10px;">
   
