--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -16,13 +16,6 @@
     <div class="col">
       <form (ngSubmit)="saveRequest()" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
-          <div class="form-group row">
-            <label for="reqCode" class="col-sm-2 col-form-label">Request Code</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="reqCode" name="reqCode" placeholder="System Generated"
-                [(ngModel)]="request.drid" [disabled]="viewMode||editMode" readonly />
-            </div>
-          </div>
 
           <div class="form-group row">
             <label for="docType" class="col-sm-2 col-form-label">Document Type<span
@@ -38,6 +31,16 @@
               </div>
             </div>
           </div>
+
+          <div class="form-group row">
+            <label for="reqCode" class="col-sm-2 col-form-label">Request Code</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="reqCode" name="reqCode" placeholder="System Generated"
+                [(ngModel)]="request.drid" [disabled]="viewMode||editMode" readonly />
+            </div>
+          </div>
+
+        
 
           <!-- <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label">Department<span
@@ -56,8 +59,16 @@
           <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label">Department</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="Department" name="Department"
+              <input type="text" class="form-control" id="Department" name="Department" placeholder="Select Departmnet"
               [(ngModel)]="request.department" readonly [disabled]="viewMode"/>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="purpose" class="col-sm-2 col-form-label">Purpose</label>
+            <div class="col-sm-10">
+              <textarea class="form-control mw-350" id="purpose" name="purpose" rows="3" placeholder="Purpose"
+                [(ngModel)]="request.purpose" [disabled]="viewMode"></textarea>
             </div>
           </div>
 
@@ -75,13 +86,7 @@
             </div>
           </div>
 
-          <div class="form-group row">
-            <label for="purpose" class="col-sm-2 col-form-label">Purpose</label>
-            <div class="col-sm-10">
-              <textarea class="form-control mw-350" id="purpose" name="purpose" rows="3" placeholder="Purpose"
-                [(ngModel)]="request.purpose" [disabled]="viewMode"></textarea>
-            </div>
-          </div>
+         
 
         </div>
 
